file(GLOB SOURCES src/*.c*)
file(GLOB INCLUDES include/*.h)

set(OpenGL_GL_PREFERENCE GLVND)
set(BULLET2_MULTITHREADING ON CACHE BOOL "" FORCE)
set(BUILD_OPENGL3_DEMOS OFF CACHE BOOL "" FORCE)
set(BUILD_BULLET2_DEMOS OFF CACHE BOOL "" FORCE)
set(BUILD_EXTRAS OFF CACHE BOOL "" FORCE)
set(BUILD_CPU_DEMOS OFF CACHE BOOL "" FORCE)
set(USE_GLUT OFF CACHE BOOL "" FORCE)
set(BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)

add_subdirectory(bullet3-external EXCLUDE_FROM_ALL)

add_platform_module(
	SOURCES ${SOURCES} ${INCLUDES}
	INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${CMAKE_CURRENT_SOURCE_DIR}/bullet3-external/src
	LIBRARIES BulletDynamics BulletCollision LinearMath Bullet3Common)
	
