file(GLOB SOURCES src/*.c*)
file(GLOB INCLUDES include/*.h)

if(NOT ENABLE_SDL2_BUILD)
	find_package(SDL2)
endif()

if(NOT SDL2_FOUND)
	set(RENDER_D3D OFF CACHE BOOL "" FORCE)
	set(RENDER_VULKAN OFF CACHE BOOL "" FORCE)
	set(RENDER_KMSDRM OFF CACHE BOOL "" FORCE)
	set(DIRECTX OFF CACHE BOOL "" FORCE)
	set(WASAPI OFF CACHE BOOL "" FORCE)
	set(VIDEO_X11 ON CACHE BOOL "" FORCE)
	set(VIDEO_WAYLAND ON CACHE BOOL "" FORCE)
	set(SDL_SHARED OFF CACHE BOOL "" FORCE)

	add_subdirectory(sdl2-external)
	set(SDL2_LIBRARY SDL2-static)
	
	if(NEO_BUILD_SHARED_LIBS)
		set_target_properties(SDL2-static PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
	endif()
	
	set(SDL2_INCLUDE_DIR
		${CMAKE_CURRENT_BINARY_DIR}/sdl2-external/include
		${CMAKE_CURRENT_SOURCE_DIR}/sdl2-external/include)
endif()

add_platform_module(
	SOURCES ${SOURCES} ${INCLUDES}
	INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${SDL2_INCLUDE_DIR}
	LIBRARIES "${SDL2_LIBRARY}")
	
install(DIRECTORY include/ DESTINATION include)
