file(GLOB SOURCES src/*.c*)
file(GLOB INCLUDES include/*.h)

option(ENABLE_SDL2_BUILD "Use bundled SDL2 instead of the system version." OFF)
if(NOT ENABLE_SDL2_BUILD)
	find_package(SDL2)
endif()

if(NOT SDL2_FOUND)
	set(SDL_RENDER_D3D OFF CACHE BOOL "" FORCE)
	set(SDL_RENDER_VULKAN OFF CACHE BOOL "" FORCE)
	set(SDL_RENDER_KMSDRM OFF CACHE BOOL "" FORCE)
	set(SDL_DIRECTX OFF CACHE BOOL "" FORCE)
	set(SDL_WASAPI OFF CACHE BOOL "" FORCE)
	set(SDL_VIDEO_X11 ON CACHE BOOL "" FORCE)
	set(SDL_VIDEO_WAYLAND ON CACHE BOOL "" FORCE)
	set(SDL_WAYLAND_LIBDECOR ON CACHE BOOL "" FORCE)
	set(SDL_VIDEO ON CACHE BOOL "" FORCE)

	if(BUILD_SHARED_LIBS)
		set(SDL_SHARED ON CACHE BOOL "" FORCE)
		set(SDL2_LIBRARY SDL2)
	else()
		set(SDL_SHARED OFF CACHE BOOL "" FORCE)
		set(SDL2_LIBRARY SDL2-static)
	endif()

	add_subdirectory(sdl2-external EXCLUDE_FROM_ALL)
	
	set(SDL2_INCLUDE_DIR
		$<BUILD_INTERFACE:${SDL2_BINARY_DIR}/include>
		$<BUILD_INTERFACE:${SDL2_BINARY_DIR}/include-config-$<LOWER_CASE:$<CONFIG>>>
		${CMAKE_CURRENT_SOURCE_DIR}/sdl2-external/include
		${CMAKE_CURRENT_SOURCE_DIR}/sdl2-external/include)

	install(TARGETS ${SDL2_LIBRARY} DESTINATION lib)
	install(DIRECTORY sdl2-external/include/ DESTINATION include/SDL2)
endif()

add_platform_module(
	SOURCES ${SOURCES} ${INCLUDES}
	INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${SDL2_INCLUDE_DIR}
	LIBRARIES "${SDL2_LIBRARY}")
	
install(DIRECTORY include/ DESTINATION include)

#install(TARGETS ${SDL2_LIBRARY}
#		EXPORT FindSDL2
#		RUNTIME DESTINATION bin
#		LIBRARY DESTINATION lib
#		ARCHIVE DESTINATION lib)
	
#install(EXPORT FindSDL2 DESTINATION ${NEO_CMAKE_EXPORT})

