file(GLOB SOURCES src/*.c*)
file(GLOB INCLUDES include/*.h)

set(ASSIMP_NO_EXPORT OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT ON CACHE BOOL "" FORCE)
# set(ASSIMP_BUILD_COLLADA_IMPORTER ON)
# set(ASSIMP_BUILD_STEP_IMPORTER ON)
set(ASSIMP_ENABLE_BOOST_WORKAROUND ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ZLIB OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_MINIZIP ON CACHE BOOL "" FORCE)

# We already pull in zlib ourselves so no need to use the system one
# or the assimp provided one.
set(ZLIB_FOUND TRUE)
set(ZLIB_LIBRARIES zlib)

add_definitions(-DASSIMP_BUILD_BOOST_WORKAROUND)
add_subdirectory(assimp-external)

add_platform_module(
	SOURCES ${SOURCES} ${INCLUDES}
	INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include
		${CMAKE_CURRENT_SOURCE_DIR}/assimp-external/include
		${CMAKE_CURRENT_BINARY_DIR}/assimp-external/include
	LIBRARIES assimp)
