file(GLOB SOURCES src/*.c*)
file(GLOB INCLUDES include/*.h)

set(PHYSFS_BUILD_SHARED CACHE "" OFF FORCE)
set(PHYSFS_BUILD_TEST CACHE "" OFF FORCE)

if(OFF AND EMSCRIPTEN)
	set(PHYSFS_ARCHIVE_7Z CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_DIR CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_GRP CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_HOG CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_ISO9660 CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_MVL CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_QPAK CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_SLB CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_VDF CACHE "" OFF FORCE)
	set(PHYSFS_ARCHIVE_WAD CACHE "" OFF FORCE)
	
	set(PHYSFS_ARCHIVE_ZIP CACHE "" ON FORCE)
	
	# add_definitions(-DPHYSFS_POSIX=1)
endif()

add_subdirectory(physfs-external EXCLUDE_FROM_ALL)

add_platform_module(
	SOURCES ${SOURCES} ${INCLUDES}
	INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${CMAKE_CURRENT_SOURCE_DIR}/physfs-external/src
	LIBRARIES physfs-static)
